test/expected/declare_cf_v-c.out
declare f as const function returning void
        ^
9: error: "constant" functions are not supported in C
